--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mqtt": "^2.15.2",
     "mustache": "^2.3.0",
     "mustache-express": "^1.2.5",
+    "solar-calc": "^1.1.0",
     "sqlite3": "^3.1.13"
   },
   "devDependencies": {
