--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "babel-node server.js",
     "watch": "watchify web/index.js -o dist/bundle.js -t babelify --debug --verbose",
-    "dev": "run-p watch server",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix"
+    "dev": "run-p watch server"
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
     "express": "^4.16.2",
     "express-ws": "^3.0.0",
     "moment": "^2.20.1",
@@ -23,14 +22,12 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.1.0",
-    "eslint": "^4.18.1",
     "npm-run-all": "^4.1.2",
     "watchify": "^3.10.0"
   },
