--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "babel-node server.js",
     "watch": "watchify web/index.js -o dist/bundle.js -t babelify --debug --verbose",
-    "dev": "run-p watch server"
+    "dev": "run-p watch server",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
+
   },
   "dependencies": {
+    "babel-eslint": "^8.2.2",
     "chart.js": "^2.7.2",
+    "eslint": "^4.18.2",
     "express": "^4.16.2",
     "express-ws": "^3.0.0",
     "moment": "^2.20.1",
