--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babelify": "^8.0.0",
     "browserify": "^16.1.0",
     "eslint": "^4.18.2",
+    "eslint-plugin-security": "^1.4.0",
     "npm-run-all": "^4.1.2",
     "snyk": "^1.69.10",
     "watchify": "^3.10.0"
