--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "run-p watch server",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "check-vulnerabilities": "snyk test"
+    "check-vulnerabilities": "snyk test",
+    "lint-fix": "eslint . --fix"
   },
   "dependencies": {
     "babel-eslint": "^8.2.2",
