--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mqtt": "^2.15.2",
     "mustache": "^2.3.0",
     "mustache-express": "^1.2.5",
+    "node-schedule": "^1.3.0",
     "solar-calc": "^1.1.0",
     "sqlite3": "^3.1.13"
   },
