--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "babel-eslint": "^8.2.2",
     "chart.js": "^2.7.2",
+    "degrees-to-direction": "^1.1.1",
     "express": "^4.16.2",
     "express-ws": "^3.0.0",
     "moment": "^2.20.1",
